fix: hide body overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,7 @@ body {
   font-family: Roboto, Helvetica, sans-serif;
   font-size: var(--text-2xl); /* 1.5rem (24px) */
   line-height: var(--text-2xl--line-height); /* calc(2 / 1.5) */
+  @apply overflow-hidden;
 }
 
 /** Mosaik Theme Variables */
